@@ -82,6 +82,9 @@ const char compat_c_id[] =
 #ifdef HAVE_PTHREAD_H
 #include <pthread.h>
 #endif
+#ifdef HAVE_SIGNAL_H
+#include <signal.h>
+#endif
 #ifdef HAVE_UTIME_H
 #include <utime.h>
 #endif
@@ -996,6 +999,12 @@ tor_pthread_helper_fn(void *_data)
   tor_pthread_data_t *data = _data;
   void (*func)(void*);
   void *arg;
+  /* mask signals to worker threads to avoid SIGPIPE, etc */
+  sigset_t sigs;
+  /* We're in a subthread; don't handle any signals here. */
+  sigfillset(&sigs);
+  pthread_sigmask(SIG_SETMASK, &sigs, NULL);
+
   func = data->func;
   arg = data->data;
   tor_free(_data);
